--- a/front/package.json
+++ b/front/package.json
@@ -8,9 +8,9 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
-    "bootstrap-vue-3": "^0.2.10",
     "core-js": "^3.24.1",
+    "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
   },
