--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,8 @@
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
